centre alignment and border colour issues fixed

--- a/css/base.css
+++ b/css/base.css
@@ -26,6 +26,17 @@ input{
   border: 3px solid rgba(13, 174, 158, 1);
 }
 
+/*additional element*/
+nav{
+  padding-top: 15px;
+}
+
+
+/*additional element*/
+.nodiv {
+  padding-top: 50px;
+}
+
 .one {
 	background-color: rgba(205, 23, 36, 1);
   display: block;
@@ -95,17 +106,17 @@ header {
 }
 
 #t1, #t5, #t9, #t13 {
-  border-right: 3px solid rgba(139, 77, 0, 1);
+  border-right: 3px solid rgba(13, 174, 158, 1);
 }
 
 #t2, #t6, #t10, #t14 {
-  border-left: 3px solid rgba(139, 77, 0, 1);
+  border-left: 3px solid rgba(13, 174, 158, 1);
 }
 
 #t4, #t5, #t6, #t7 {
-  border-bottom: 3px solid rgba(139, 77, 0, 1);
+  border-bottom: 3px solid rgba(13, 174, 158, 1);
 }
 
 #t8, #t9, #t10, #t11 {
-  border-top: 3px solid rgba(139, 77, 0, 1);
+  border-top: 3px solid rgba(13, 174, 158, 1);
 }
